# Bond-Credit-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
bond_credit_agent/: __init__.py  app.py  chunking.py  cli.py  exceptions.py  feature_engineering.py  financial_metrics.py  ingestion.py  llm_report.py  prompt_templates.py  qa.py  report_generator.py  retriever.py  risk_rules.py  schemas.py  workflow.py
data/sample/: financials_sample.csv  issuer_profile_sample.json  sample_annual_report_excerpt.txt  sample_bond_prospectus.txt  sample_covenant_note.md  sample_rating_report.txt
docs/: job_alignment_resume_pack.md
outputs/: sample_credit_report.md
tests/: test_app.py  test_feature_engineering.py  test_financial_metrics.py  test_ingestion.py  test_qa.py  test_report_generator.py  test_retriever.py  test_risk_rules.py  test_validation.py  test_workflow.py
