[project]
name = "bond-credit-due-diligence-agent"
version = "0.1.0"
description = "MVP bond credit due diligence and risk analysis agentic workflow"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pydantic>=2.0",
  "scikit-learn>=1.3",
  "pypdf>=4.0",
  "openpyxl>=3.1",
  "gradio>=4.0",
  "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ml = [
  "xgboost>=2.0",
  "torch>=2.0",
  "transformers>=4.0",
  "langchain>=0.2",
  "faiss-cpu>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
